# vec-cpp

./: .gitignore  README.md  VecCpp.g4  gen-parser  main.cpp  meson.build  spec.md
.github/workflows/: build.yml
parser/: VecCpp.interp  VecCppBaseListener.cpp  VecCppBaseListener.h  VecCppLexer.cpp  VecCppLexer.h  VecCppLexer.interp  VecCppLexer.tokens  VecCppListener.cpp  VecCppListener.h  VecCppParser.cpp  VecCppParser.h
subprojects/: antlr.wrap  eigen.wrap
subprojects/packagefiles/antlr4/: 0001.patch
tests/: test.v
